[package]
name = "repost_rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { version = "1.0.81", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
instagram-scraper-rs  = { path = "/Users/john/Desktop/Projects/instagram-scraper-rs" }
#instagram-scraper-rs  = { path = "./instagram_scraper_rs" }
#indicatif-tracing-bridge = { path = "/Users/john/Desktop/Projects/indicatif-tracing-bridge"  }
log = "0.4.21"
rand = "0.8.5"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
chrono = "0.4.37"
indexmap = {version = "2.2.6", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
regex = "1.10.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
serde_yaml = "0.9.33"
futures = "0.3.30"
reqwest_cookie_store = "0.7.0"
tracing = "0.1.40"
tracing-appender = { version = "0.2.3"  }
serenity = { version = "0.12.1" }
poise = { version = "0.6.1" }
backtrace = "0.3.71"
reqwest = "0.12.2"
image = "0.25.1"
image_hasher = "2.0.0"
rust-s3 = "0.34.0-rc4"
#indicatif = "0.16.2"

[profile.release]
debug = true
