[package]
name = "repost_rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.81", features = [] }
chrono = "0.4.37"
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
futures = "0.3.30"
image = "0.25.1"
image_hasher = "2.0.0"
indexmap = { version = "2.2.6", features = ["serde"] }
instagram-scraper-rs = { path = "/Users/john/Desktop/Projects/instagram-scraper-rs" }
#instagram-scraper-rs = { git = "https://github.com/gramistella/instagram-scraper-rs"}
#instagram-scraper-rs = { path = "./instagram_scraper_rs" }
lazy_static = "1.4.0"
log = "0.4.21"
poise = { version = "0.6.1" }
rand = "0.8.5"
regex = "1.10.4"
reqwest = "0.12.2"
reqwest_cookie_store = "0.7.0"
rust-s3 = "0.34.0-rc4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.33"
serenity = { version = "0.12.1" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }

[profile.release]
debug = true
