[package]
name = "repost_rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
instagram-scraper-rs = { path = "/Users/john/Desktop/Projects/instagram-scraper-rs" }
#instagram-scraper-rs = { git = "https://github.com/gramistella/instagram-scraper-rs"}
#instagram-scraper-rs = { path = "./instagram_scraper_rs" }

anyhow = { version = "1.0.86", features = [] }
thiserror = "1.0.61"
chrono = "0.4.38"
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
futures = "0.3.30"
image = "0.25.1"
image_hasher = "2.0.0"
indexmap = { version = "2.2.6", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.21"
rand = "0.8.5"
regex = "1.10.4"
reqwest = "0.12.2"
reqwest_cookie_store = "0.7.0"
rust-s3 = "0.34.0-rc4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.33"
serenity = { version = "0.12.1" }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
async-trait = "0.1.80"

[profile.release]
debug = true
panic = "abort"
